# docker_101

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.og  Dockerfile.web  Makefile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  qr_gen.py  requirements.txt  startup.sh
.github/workflows/: ci.yml  docker.yml
docs/: docker.md  poetry.md
examples/gatsby/: package.json
examples/node/: package.json
prez/: presentation.ipynb  presentation.md  presentation_deckset.md  presentation_edited.md
prez/img/: death_star_edited.pxd  meetup_docker-2-1024x611.pxd
