[tool.poetry]
name = "docker-101"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "docker_101"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
PyQRCode = "^1.2.1"
rich = "^13.3.1"
pypng = "^0.20220715.0"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
